2005-02-07 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Added the definition of detail pane font.
	* IInternalCDebugUIConstants.java
	* ModulesView.java
	* plugin.xml
	* plugin.properties

2005-02-07 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	* CDebugUIMessages.properties
	* CDebugImages.java
	* CDebugModelPresentation.java
	* CDTDebugModelPresentation.java: removed
	* ICDebugHelpContextIds.java
	* ActionMessages.properties
	* CollapseAllModulesAction.java: new
	* ToggleDetailPaneAction.java: new
	* ICDebugPreferenceConstants.java
	* DebugViewDecoratingLabelProvider.java: new
	* DebugViewInterimLabelProvider.java: new
	* DebugViewLabelDecorator.java: new
	* org.eclipse.cdt.debug.internal.ui.views.modules: new package
	* ModulesMessages.properties: new
	* ModulesMessages.java: new
	* ModulesView.java: new
	* ModulesViewContentProvider.java: new
	* ModulesViewer.java: new
	* ModulesViewEventHandler.java: new
	* CDebugUIPlugin.java
	* plugin.xml
	* plugin.properties

2005-02-07 Mikhail Khodjaiants
	Added images for the "Collapse All" action of the modules view.
	* icons\full\clcl16\collapseall.gif
	* icons\full\dlcl16\collapseall.gif
	* icons\full\elcl16\collapseall.gif

2005-02-03 Mikhail Khodjaiants
	Added new images for the modules view.
	* icons\full\clcl16\det_pane_hide.gif
	* icons\full\clcl16\det_pane_right.gif
	* icons\full\clcl16\det_pane_under.gif
	* icons\full\dlcl16\det_pane_hide.gif
	* icons\full\dlcl16\det_pane_right.gif
	* icons\full\dlcl16\det_pane_under.gif
	* icons\full\elcl16\det_pane_hide.gif
	* icons\full\elcl16\det_pane_right.gif
	* icons\full\elcl16\det_pane_under.gif
	* icons\full\cview16\modules_view.gif
	* icons\full\obj16\exec_dbg_obj.gif
	* icons\full\obj16\exec_obj.gif

2005-02-03 Mikhail Khodjaiants
	Fix for bug 84402: computeDetail executes in the UI thread.
	* CValueDetailProvider.java

2005-02-03 Mikhail Khodjaiants