@@ -1,3 +1,13 @@
+2005-02-08 Mikhail Khodjaiants
+	Bug 82264: Enhance the Shared Libraries view.
+	Improved detail information.
+	Save the viewer state.
+	* AbstractViewerState.java: new
+	* ModulesMessages.properties
+	* ModulesView.java
+	* ModulesViewerState.java: new
+	* plugin.xml
+
 2005-02-07 Mikhail Khodjaiants
 	Bug 82264: Enhance the Shared Libraries view.
 	Added the definition of detail pane font.
